--- a/ch03s02.html
+++ b/ch03s02.html
@@ -5,9 +5,13 @@
 	  });	
 	</script><script xmlns="" type="text/javascript" src="script/head.js"></script></head><body><div class="navheader"><table width="100%" summary="Navigation header"><tr><td width="20%" align="left"><a accesskey="p" href="ch03s01.html">戻る</a> </td><th width="60%" align="center"> </th><td width="20%" align="right"> <a accesskey="n" href="pt01.html">次へ</a></td></tr></table><hr /></div><div class="section"><div class="titlepage"><div><div><h2 class="title" style="clear: both"><a id="_本書の貢献者リスト"></a>3.2. 本書の貢献者リスト</h2></div></div></div><p>以下の方は本書の誤り、誤植等を指摘をして頂いた方です。</p><div class="itemizedlist"><ul class="itemizedlist" style="list-style-type: disc; "><li class="listitem">
 kaito @kaito_tateyama さん
+</li><li class="listitem">
+小林 @iam_eccentrlc さん
 </li></ul></div><p>第15章 /proc ディレクトリー のmmap
 「このハーデディスク等のアドレス領域を」→「このハードディスク等のアドレス領域を」
-15:28 - 2019年7月6日</p></div><div class="navfooter"><hr /><table width="100%" summary="Navigation footer"><tr><td width="40%" align="left"><a accesskey="p" href="ch03s01.html">戻る</a> </td><td width="20%" align="center"><a accesskey="u" href="ch03.html">上に戻る</a></td><td width="40%" align="right"> <a accesskey="n" href="pt01.html">次へ</a></td></tr><tr><td width="40%" align="left" valign="top"> </td><td width="20%" align="center"><a accesskey="h" href="index.html">ホーム</a></td><td width="40%" align="right" valign="top"> </td></tr></table></div><wrapper xmlns=""><p>Copyright 2018-2019, by Masaki Komatsu</p>
+15:28 - 2019年7月6日</p><p>第6章 シェルの確認
+「次にコマンドは稼働中の Linux のビルドバージョンです。」→「次のコマンドは稼働中の Linux のビルドバージョンです。」
+2020年1月2日</p></div><div class="navfooter"><hr /><table width="100%" summary="Navigation footer"><tr><td width="40%" align="left"><a accesskey="p" href="ch03s01.html">戻る</a> </td><td width="20%" align="center"><a accesskey="u" href="ch03.html">上に戻る</a></td><td width="40%" align="right"> <a accesskey="n" href="pt01.html">次へ</a></td></tr><tr><td width="40%" align="left" valign="top"> </td><td width="20%" align="center"><a accesskey="h" href="index.html">ホーム</a></td><td width="40%" align="right" valign="top"> </td></tr></table></div><wrapper xmlns=""><p>Copyright 2018-2019, by Masaki Komatsu</p>
 
 
 </wrapper></body></html>
